lib/tests/fixtures/compiler/parser/return_in_parameter.baseline
Error: return_in_parameter.pp:1:33: return statement cannot be used inside parameter default value.
  function foo($param = if true { return }) {
                                  ^~~~~~
