lib/tests/fixtures/compiler/parser/return_in_parameter.pp
function foo($param = if true { return }) {

}
